# legacy-code-analysis

./: .gitignore  README.md  TOOLS.md
01_callgraphs/: README.md
01_callgraphs/calcjob/: CMakeLists.txt  Manager.hpp
01_callgraphs/calcjob_instr/: CMakeLists.txt  CalcJob.hpp  main.cpp
01_callgraphs/notebooks/: Callgraph.ipynb
01_callgraphs/scripts/: export-to-csv.sh
apps/calcjob/: CMakeLists.txt  README.md
lessons/00_introduction/: Introduction.md
lessons/01_callgraphs/: LEARNING.md  README.md  instrumentation.patch
lessons/01_callgraphs/calcjob_instr/: Reporter.hpp  Worker.hpp
lessons/01_callgraphs/notebooks/: Callgraph.ipynb
lessons/01_codebase_metrics/01_cloc/: LESSON.md  REQUIREMENTS.md  run-cloc.sh
lessons/01_codebase_metrics/01_cloc/notebooks/: LoCReport.ipynb
lessons/01_codebase_metrics/01_cloc/results/: cloc_metrics.csv  found.txt
lessons/01_codebase_metrics/02_lizard/: INSTALL.md  run-lizard.sh
lessons/01_codebase_metrics/03_cppcheck/: INSTALL.md  run-cppcheck.sh
lessons/01_codebase_metrics/04_clang-tidy/: INSTALL.md  run-check.sh
lessons/01_codebase_understanding/: TOOLS.md
lessons/01_understanding_and_dimensioning/: Introduction.md
lessons/02_callgrind/: README.md  run-callgrind.sh
lessons/02_callgrind/results/: callgraph.dot  callgrind.out.39759
lessons/02_codebase_understanding/04_clangd/: INSTALL.md
lessons/03_debugging/: TOOLS.md
lessons/03_lltng/: README.md
lessons/03_profiling/02_callgrind/: README.md
lessons/04_profiling/01_callgraphs/: LESSON.md
lessons/04_profiling/02_callgrind/: LESSON.md
(+18 files in other folders)
